# hyprwatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
src/: CMakeLists.txt  connect.cpp  connect.hpp  main.cpp  parse.cpp  parse.hpp  unix_socket.cpp
src/client/: CMakeLists.txt  ipc_client.cpp  ipc_client.hpp  main.cpp  parse.cpp  parse.hpp  ui.cpp  ui.hpp
src/daemon/: CMakeLists.txt  client_socket.cpp  connect.cpp  connect.hpp  hyprwatchd.service.in  main.cpp  parse.cpp  parse.hpp  serialize.cpp  serialize.hpp  server_socket.cpp  server_socket.hpp  time_track.cpp  time_track.hpp
